--- a/latexcode.tex
+++ b/latexcode.tex
@@ -179,7 +179,7 @@ Multiplying both sides of Equation (3.0.1) by ${\myvec{3&-5\\5&3}}^{-1}$,we have
 =\frac{1}{34}\myvec{102&-102\\102&102}\myvec{1\\0}\\
 =\myvec{3&-3\\3&3}\myvec{1\\0}\\
 \implies\myvec{x\\-y}=\myvec{3\\3}\\
-\text{Therefore,}\\
+\text{Therefore,}\hspace{10}
 x=3,\\ y=-3    
 \end{align}
 \end{document}
