--- a/latexcode.tex
+++ b/latexcode.tex
@@ -170,11 +170,11 @@ The conjugate of \myvec{-6\\-24} is \myvec{-6\\24}
 
 Using equivalent matrices for complex numbers, we have
 \begin{align}
-\myvec{x&y\\-y&x}\myvec{3&-5\\5&3}\myvec{1\\0}=\myvec{-6&-24\\24&-6}\myvec{1\\0}
+\myvec{x\\-y}\myvec{3&-5\\5&3}\myvec{1\\0}=\myvec{-6&-24\\24&-6}\myvec{1\\0}
 \end{align}
 Multiplying both sides of Equation (3.0.1) by ${\myvec{3&-5\\5&3}}^{-1}$,we have
 \begin{align}
-\myvec{x&y\\-y&x}\myvec{1\\0}=\myvec{-6&-24\\24&-6}{\myvec{3&-5\\5&3}}^{-1}\myvec{1\\0}\\
+\myvec{x\\-y}=\myvec{-6&-24\\24&-6}{\myvec{3&-5\\5&3}}^{-1}\myvec{1\\0}\\
 =\frac{1}{34}\myvec{-6&-24\\24&-6}\myvec{3&5\\-5&3}\myvec{1\\0}\\
 =\frac{1}{34}\myvec{102&-102\\102&102}\myvec{1\\0}\\
 =\myvec{3&-3\\3&3}\myvec{1\\0}\\
