--- a/latexcode.tex
+++ b/latexcode.tex
@@ -165,14 +165,10 @@ Conjugate of a complex number
 \section{Solution}
 The conjugate of \myvec{-6\\-24} is \myvec{-6\\24} 
 \begin{align}
- \implies \myvec{x\\-y}\myvec{3\\5} =\myvec{-6\\24}  
+ \implies \myvec{x\\-y}\myvec{3\\5} =\myvec{-6\\24}\\  
+  \implies \myvec{x\\-y}=\frac{\myvec{-6\\24}}{\myvec{3\\5}}
 \end{align}
-
 Using equivalent matrices for complex numbers, we have
-\begin{align}
-\myvec{x\\-y}\myvec{3&-5\\5&3}\myvec{1\\0}=\myvec{-6&-24\\24&-6}\myvec{1\\0}
-\end{align}
-Multiplying both sides of Equation (3.0.1) by ${\myvec{3&-5\\5&3}}^{-1}$,we have
 \begin{align}
 \myvec{x\\-y}=\myvec{-6&-24\\24&-6}{\myvec{3&-5\\5&3}}^{-1}\myvec{1\\0}\\
 =\frac{1}{34}\myvec{-6&-24\\24&-6}\myvec{3&5\\-5&3}\myvec{1\\0}\\
