--- a/latexcode.tex
+++ b/latexcode.tex
@@ -156,7 +156,7 @@ Find the real numbers $x,y$ such that \myvec{x\\-y}\myvec{3\\5} is conjugate of 
 \section{Explanation}
 The matrix representation of a complex number
 \begin{align}
-\myvec{a\\b}\hspace{5} is \hspace{5} \myvec{a&-b\\b&a}\myvec{1\\0}
+\myvec{a\\b}=\myvec{a&-b\\b&a}\myvec{1\\0}
 \end{align}
 Conjugate of a complex number
 \begin{align}
@@ -175,7 +175,7 @@ Using equivalent matrices for complex numbers, we have
 =\frac{1}{34}\myvec{102&-102\\102&102}\myvec{1\\0}\\
 =\myvec{3&-3\\3&3}\myvec{1\\0}\\
 \implies\myvec{x\\-y}=\myvec{3\\3}\\
-\text{Therefore,}\hspace{10}
+\text{Therefore,}
 x=3,\\ y=-3    
 \end{align}
 \end{document}
